--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
           <a href="https://github.com/rguerrero04" class="social" aria-label="GitHub">
             <img src="icons/github.svg" alt="GitHub" />
           </a>
-          <a href="https://www.linkedin.com/" class="social" aria-label="LinkedIn">
+          <a href="https://www.linkedin.com/in/ramon-guerrero-437889234/" class="social" aria-label="LinkedIn">
             <img src="icons/linkedin.svg" alt="LinkedIn" />
           </a>
-          <a href="mailto:ramonguerrero@ucsd.edu" class="social" aria-label="Email">
+          <a href="mailto:rguerre2004@gmail.com" class="social" aria-label="Email">
             <img src="icons/mail.svg" alt="Email" />
           </a>
         </div>
@@ -181,7 +181,7 @@
     <!-- Contact -->
     <section id="contact" class="section container contact" aria-labelledby="contact-title">
       <h2 id="contact-title">Let’s work together</h2>
-      <p>Use the form or email <a href="mailto:ramonguerrero@ucsd.edu">ramonguerrero@ucsd.edu</a>.</p>
+      <p>Use the form or email <a href="mailto:rguerre2004@gmail.com">rguerre2004@gmail.com</a>.</p>
       <form class="form" action="https://formspree.io/f/your-id" method="POST">
         <div class="field">
           <label for="name">Name</label>
