--- a/index.html
+++ b/index.html
@@ -195,6 +195,10 @@
           <label for="message">Message</label>
           <textarea id="message" name="message" rows="5" required></textarea>
         </div>
+
+        <!-- Redirect after success -->
+        <input type="hidden" name="_redirect" value="https://guerreroramon.com/thanks.html">
+        
         <button class="btn primary" type="submit">Send</button>
       </form>
     </section>
