--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         </div>
 
         <!-- Redirect after success -->
-        <input type="hidden" name="_redirect" value="https://guerreroramon.com/thanks.html">
+        <input type="hidden" name="_redirect" value="https://www.guerreroramon.com/thanks.html">
         
         <button class="btn primary" type="submit">Send</button>
       </form>
