--- a/index.html
+++ b/index.html
@@ -182,21 +182,24 @@
     <section id="contact" class="section container contact" aria-labelledby="contact-title">
       <h2 id="contact-title">Let’s work together</h2>
       <p>Use the form or email <a href="mailto:rguerre2004@gmail.com">rguerre2004@gmail.com</a>.</p>
-      <form class="form" action="https://formspree.io/f/xkgzeeoy" method="POST">
-        <div class="field">
-          <label for="name">Name</label>
-          <input id="name" name="name" type="text" required />
-        </div>
-        <div class="field">
-          <label for="email">Email</label>
-          <input id="email" name="email" type="email" required />
-        </div>
-        <div class="field">
-          <label for="message">Message</label>
-          <textarea id="message" name="message" rows="5" required></textarea>
-        </div>   
-        <button class="btn primary" type="submit">Send</button>
-      </form>
+        <form id="contactForm" class="form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST" data-redirect="/thanks.html">
+          <input type="text" name="company" tabindex="-1" autocomplete="off" style="position:absolute;left:-10000px;" aria-hidden="true">
+          <div class="field">
+            <label for="name">Name</label>
+            <input id="name" name="name" type="text" required />
+          </div>
+          <div class="field">
+            <label for="email">Email</label>
+            <input id="email" name="email" type="email" required />
+          </div>
+          <div class="field">
+            <label for="message">Message</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
+          </div>
+          <input type="hidden" name="_next" value="https://www.guerreroramon.com/thanks.html">
+          <button class="btn primary" type="submit">Send</button>
+        </form>
+        <p id="formStatus" class="form-status" role="status" aria-live="polite" hidden></p>
     </section>
   </main>
 
