--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <label for="message">Message</label>
             <textarea id="message" name="message" rows="5" required></textarea>
           </div>
-          <input type="hidden" name="_next" value="https://www.guerreroramon.com/thanks.html">
+          <!-- <input type="hidden" name="_next" value="https://www.guerreroramon.com/thanks.html"> -->
           <button class="btn primary" type="submit">Send</button>
         </form>
         <p id="formStatus" class="form-status" role="status" aria-live="polite" hidden></p>
