Set placeholder text

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             <img src="assets/project-1.jpg" alt="Mobile app map measurement UI" loading="lazy" />
           </a>
           <div class="card__body">
-            <h3 class="card__title"><a href="#">Mapulator — Area & Perimeter</a></h3>
+            <h3 class="card__title"><a href="#">Lorem ipsum dolor sit</a></h3>
             <p class="card__meta">Product Design · iOS · 2025</p>
-            <p>Redesigned a geospatial measurement app for clarity in low-contrast urban maps. Result: 21% faster task completion in usability tests.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam vitae orci tincidunt, auctor ante sit amet, consectetur felis.</p>
             <ul class="chips">
               <li>Usability Testing</li><li>Visual Hierarchy</li><li>SwiftUI</li>
             </ul>
@@ -85,9 +85,9 @@
             <img src="assets/project-2.jpg" alt="Sticky notes on a wall for affinity mapping" loading="lazy" />
           </a>
           <div class="card__body">
-            <h3 class="card__title"><a href="#">Teaching by Doing — DCog in Practice</a></h3>
+            <h3 class="card__title"><a href="#">Lorem ipsum dolor sit amet, consectetur</a></h3>
             <p class="card__meta">Research · Field Study · 2025</p>
-            <p>Analyzed expert–novice coordination in a paper-airplane activity. Identified scaffolding moves improving learning efficiency by 32%.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam vitae orci tincidunt, auctor ante sit amet, consectetur felis.</p>
             <ul class="chips">
               <li>Distributed Cognition</li><li>Ethnography</li><li>Thematic Analysis</li>
             </ul>
@@ -100,9 +100,9 @@
             <img src="assets/project-3.jpg" alt="WCAG accessibility checklist with screens" loading="lazy" />
           </a>
           <div class="card__body">
-            <h3 class="card__title"><a href="#">Campus Services Accessibility</a></h3>
+            <h3 class="card__title"><a href="#">Lorem ipsum dolor sit</a></h3>
             <p class="card__meta">Product & Research · 2024</p>
-            <p>Led an accessibility audit across 14 flows; prioritized fixes that reduced critical blockers for screen reader users by 40%.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam vitae orci tincidunt, auctor ante sit amet, consectetur felis.</p>
             <ul class="chips">
               <li>WCAG 2.2</li><li>Screen Reader</li><li>Prioritization</li>
             </ul>
@@ -155,7 +155,7 @@
       <div>
         <h2 id="about-title">About</h2>
         <p>I’m a Cognitive Science student (Design & Interaction) at UC San Diego. I focus on product strategy informed by research, clear information architecture, and fast iteration with stakeholders.</p>
-        <p>Previously, I’ve supported operations at UCSD’s Design Lab and built an iOS app for geospatial measurement. I care about accessibility, learning, and useful tools.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam vitae orci tincidunt, auctor ante sit amet. I care about accessibility, learning, and useful tools.</p>
         <div class="socials">
           <a href="https://github.com/rguerrero04" class="social" aria-label="GitHub">
             <img src="icons/github.svg" alt="GitHub" />
